@@ -1,26 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST hardening-wrapper_2.4.tar.gz 21082 SHA256 411248b1f89e512bd27f96cfaef2aac4fe5c50884ca0769ba94dd2b90bea5d5a SHA512 59366393821116493e204972009bc614a3aee61b15427ecf0a4bc23accea00e0891196b1250f6a3c30e9633ca54022f39ad83d49a213cd4c9aaa78e992647a07 WHIRLPOOL a2aef6b6b302a2b238953b53946865ab7864b36914d0f168073a958c8ae8041d75456283f806d99a124fd853bf775635c7bb4af0f74a5245f49b378eb28ee763
 DIST hardening-wrapper_2.5.tar.gz 21157 SHA256 9ae2cc44d9543476b5b8655b4699af5421218dce44ce0d4a89cf5d81ba12b9bf SHA512 e2c183736e9f1dd1b39ecde7d2bf2c22d4c87c69cb158d98bb527b8325d88ea86bceb6087633cc761e973a22d0cf97c6266464d117e408ed2aee2e67c8ab5565 WHIRLPOOL 652327876a29ad8a69529bcb85b1331a227348a1ca87c1e5cf69fbcea0ad7c57afdcb14536eebfc8668834a701ee80f8579b8851f596e41ee782e4c6dbf47cb9
-EBUILD hardening-check-2.4.ebuild 825 SHA256 3e2bcb30f6981b5f1bcec47e5bff7e60e6d189ca2d529559a3e062639dc70577 SHA512 5505731706834792b6f1b443551bb4cba0f44f0bb06fdce81ba39f4b240b2bcd55bdf4d47ed1d0b8e1aeada137986ef3ec5069eaf28e0cc98e0319b3d76e8609 WHIRLPOOL bea1c320462f74eba8c85b65c91023820de93414c2cb4e74cc8e16ef26ba58a930b275264f5d083a32eeb2fe4e55b0a0ea6c16f78ee1304c5f5bd45d41ade7f7
-EBUILD hardening-check-2.5.ebuild 620 SHA256 4aee4fe4e2850a77025f1e69b9ac77f72e103d5b3434dde196ec85555957c31f SHA512 a729b7f28a3ab4d8364e67e42f2dbaceb38eb61764c130e6de524ce3cb7e598292017a72be620c81b18b3ab2ba3f35843659cb7c8a122d3e9deff4e5ed21cc16 WHIRLPOOL ae39077e7ec7c9dbb3a652ae38391b78e8dae418b7d1d5f979af15e5b6f072c9899373f79ccd882af273281738adada169e476e6bfc8423467cd88fffaf24501
-MISC ChangeLog 1133 SHA256 eba64262d560c19696fb8d9b26c23c943d724d43d569e247e25ccbf44b9c20d0 SHA512 5f5183ec6e6a09be7fdac7a1ab31f65df52051bc04b55da73d1fa4f32b47886d988c439de3c874dcd1eb527b31e87fa3819776ae119954b7df21ccfcba6d8d4a WHIRLPOOL c2dc84106af2bd6e83072f8b72a57fcc43a9928b7d67a7c1438259c0444ecbe9c52f9cf5121d9d8d5a45eeccb8a0a31e682f232b82f5141bab2c7a3565b3b336
+EBUILD hardening-check-2.5.ebuild 680 SHA256 10c2bd19dba714eea9c9e1164483fc97b7410b6481051075d7fbcfb5f9d26da2 SHA512 080e901a423f5132304c9b1766cd1894c645b04b0cfc780f2be468126a617d8e58b2890362250e6f7f56a6e10e6f9a75ed1f3fbdffef26462f2c0e0b34a5c1b8 WHIRLPOOL fee1a4ae3708e78a4c71d7d440e7212d3e4de45e8031703a14a4a6c03c235769aa35fd6d57c4c02a306a84141990cead65f0e9148db7c4fc6bf16b8922b46683
+MISC ChangeLog 1272 SHA256 491eb7caa369c5837e8f6d598e5ddf4b66ba5f8880d5d271499d79afa2205260 SHA512 bcde32926c0dfe08413d2aa0c0cd7f19da91260b8000e3b1bf4aa583cdd3c2a2b012c36d6534fa85f98b0d66a69434a4cae0e161f97b30889b82c9c8cc282553 WHIRLPOOL 22a7bbc204e1c1fd926c41c1dd98fc8cf2630e7c808e27c85b553337cce7e6a8a1f083ad7827ed6501f59d0655dd756d734f18dfdbc1ec891ae92a7005e930aa
 MISC metadata.xml 402 SHA256 8e563d839499fad9af4524f6e182c346f266114b4044259ec839b2d4e42dd0ae SHA512 c7f67d4270ee05d04ca308cff1361d8fb3bea568c358ec88c442aa265f46cac6def3935bb42018c04a4ecbfb757441c9c8fb0f5223cb371ef0de4c20fa41fe0a WHIRLPOOL 0df4ab069199d2128166881f7439f20456ee5c9b6d546f214c5b77201dad2d32c4ce59246730399c89b905cf7a020690af4bb8a946b4c99ca22ebb870a418e8c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTBf8aAAoJELp701BxlEWf2JEQAKEWtHfysJLOONug1cV38ccK
-0zoa4xxhZNn2RCuzIAcrn5PuuhENCB/4pau7dWWvgC1y5+CsJU1evbIcEJzD5L7I
-niAPj9BMSClCg9VxV5Cq7rWPA/MNyUMNDIowKYZrwNiiB5TStYaegzOS16cQaJkm
-VSIA40YeAQCO30FZwIIJsxsB/kvk9+FzY6Kuf4xM3ZntDt57AgRADtfZP0xYIItk
-tyiBCuFnKnLLYNlgR1iy5/FTfCgney8dNNIsqMt7VTnpY5EX51A6t3l7AjQg0x7i
-Y8cLEvtvfQyFUa6tYjr5FQSkqgwGvUhUsc7ThRC5rFPyoeQOi2FUXuq/7ER3t5jV
-WXzRkoKl8TFM5Z79cXqITlY7uqGinR+fZTsgFOUSizX59fe/gojDt40pQYPWD5lS
-o28AzBWN6eCdCrC5difHTvu6MWW/t6fGRef5Lv9B6J48JZo0OchuSd7Av4bx5lxN
-jyhsjoKhsKhyZCeuqs9fJXwLHdcQAOQC6KQG85tKxZBRHTaDbqQano6wPIa/FToW
-XG5D+cyaLYnEpIVpImnocpu2Vl7jgMOspREHXNEUuHpITrgshc4AEjQlbp8YRO/K
-V40cZCyI7BnJB9l1gT1kPjggvxYr+pAX+gEjpI/QwMIxxQb05Tu/AtKvca0G7L+6
-akF70g1ixW6QVaZH4V7S
-=Y1ZC
+iQIcBAEBCAAGBQJT50X/AAoJELp701BxlEWfYzUQAJUKz8fdg1+PBDTiazBGjLLU
+oF1stqijjv3XVfgD750GfoAe7+3qzpyA310/jU4HyI8hBErtH2joYi+Ek0vLRujO
+BbTo+604U927X1SFkxyNhD4zVh1CSz4djKSKPIHnKe0tc2POD2KsSsjgRU/x3Vtt
+4D9+glVEOEpCqttQoeA1x0sKqS/0cZJS3rkUlahjHn5ofF+nalIezqQWSsyOXazu
+RMkvAk+Ta/oypY6uNHuIVcKbTlFN6kTCveCAVMiuq8fQSYNp8hw1w4M1b1CUh2yJ
+MDocqCWD35tHbUbKJxyRUrKlStHGro/BKs+6Se6KrRrjHgXsB5kHZSWNSmKQt1yo
+9OljzJTgEVpMmeuNyeTFGsYfGaYcCX2m4lrsiRYNCsOe5MaF61xbci88nS4lZsYN
+U+nD9OV36iooZC9vNOXlbL6mhOUCocTsKvf1+kte5bnxzQ19MSCI+XFSYDa/xX9Q
+Ix0J37CGoN8OnqFtNNNLt9SgyP+TCR5lYBLvzbX1fDrok2sFmdv8wW+lAJLP9pq0
+B5NGGRn8KHjvFJBLW8UHeXy3lroADpwSwTNbKIuArvGZ2CYDy+bEJgEU3gyln3um
+yM4do2BmvUbquSrOqQV/XHRoKrWZlXMkvYoI9h008oPrBfSuW1mU3Xxf/K1jNGk7
+B4Kr1PYr/kL8lsSzYcNT
+=5pg0
 -----END PGP SIGNATURE-----
