@@ -1,13 +1,13 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/hardening-check/hardening-check-2.5.ebuild,v 1.3 2014/02/20 13:11:53 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/hardening-check/hardening-check-2.5.ebuild,v 1.4 2014/08/10 10:14:22 ago Exp $
 
 EAPI="5"
 
 MY_PN="hardening-wrapper"
 
 DESCRIPTION="Report the hardening characterists of a set of binaries"
-HOMEPAGE="https://wiki.debian.org/Hardening"
+HOMEPAGE="https://wiki.debian.org/Hardening https://packages.debian.org/source/jessie/hardening-wrapper"
 SRC_URI="mirror://debian/pool/main/h/${MY_PN}/${MY_PN}_${PV}.tar.gz"
 
 KEYWORDS="amd64 x86"
