@@ -1,11 +1,0 @@
-DEFINED_PHASES=compile install prepare
-DEPEND=dev-lang/perl
-DESCRIPTION=Report the hardening characterists of a set of binaries
-EAPI=5
-HOMEPAGE=https://wiki.debian.org/Hardening
-KEYWORDS=amd64 x86
-LICENSE=GPL-2+
-RDEPEND=dev-lang/perl
-SLOT=0
-SRC_URI=mirror://debian/pool/main/h/hardening-wrapper/hardening-wrapper_2.4.tar.gz
-_md5_=24bf1879f094af9610522697dced0f5a
