@@ -1,9 +1,9 @@
 DEFINED_PHASES=compile install
 DESCRIPTION=Report the hardening characterists of a set of binaries
 EAPI=5
-HOMEPAGE=https://wiki.debian.org/Hardening
+HOMEPAGE=https://wiki.debian.org/Hardening https://packages.debian.org/source/jessie/hardening-wrapper
 KEYWORDS=amd64 x86
 LICENSE=GPL-2+
 SLOT=0
 SRC_URI=mirror://debian/pool/main/h/hardening-wrapper/hardening-wrapper_2.5.tar.gz
-_md5_=4c65be4a8318588ea45e9dd16df3d0f2
+_md5_=fb7c64d491b953f2a3408e6e9253febb
