@@ -11,5 +11,5 @@ REQUIRED_USE=tools? ( X )
 RESTRICT=bindist mirror strip
 SLOT=0
 SRC_URI=amd64-fbsd? ( http://us.download.nvidia.com/XFree86/FreeBSD-x86_64/334.21/NVIDIA-FreeBSD-x86_64-334.21.tar.gz ) amd64? ( http://us.download.nvidia.com/XFree86/Linux-x86_64/334.21/NVIDIA-Linux-x86_64-334.21.run ) x86-fbsd? ( http://us.download.nvidia.com/XFree86/FreeBSD-x86/334.21/NVIDIA-FreeBSD-x86-334.21.tar.gz ) x86? ( http://us.download.nvidia.com/XFree86/Linux-x86/334.21/NVIDIA-Linux-x86-334.21.run )
-_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	linux-info	2b8c53f6065bdee2d757472215a3088f	linux-mod	101302d4b7b694ea9622bbffb187d0de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	nvidia-driver	656281d12b8a01be024f45c8a112baea	portability	a45c088f246ef5091e029f6285d7ce42	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	0f1760274637a138b99bb649202ea402	udev	da001465a2e939c93f7ae16947ce3438	unpacker	f300a7ca9131b1024a79762e8edd3c52	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	linux-info	2b8c53f6065bdee2d757472215a3088f	linux-mod	101302d4b7b694ea9622bbffb187d0de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	nvidia-driver	800f567ff607d5d5171a8149456e294e	portability	a45c088f246ef5091e029f6285d7ce42	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	0f1760274637a138b99bb649202ea402	udev	da001465a2e939c93f7ae16947ce3438	unpacker	f300a7ca9131b1024a79762e8edd3c52	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
 _md5_=ae4de227d158aa3a09e966607f066ddb
